# AnesAgent

./: .gitignore  README.md  pyproject.toml  requirements-training.txt
configs/: multimodal_or_agent.json
examples/: anesthesia_case_demo.json
runs/event_router/: event_router.joblib
scripts/: run_multimodal_or_agent.py  train_event_router.py
src/: __init__.py
src/anesthesia_agent/: __init__.py  crisis_workflow.py  io_utils.py  llm_client.py  multimodal_or_workflow.py  trained_event_router.py  vision_interfaces.py
